--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
-      <meta charset="utf-8">
+      <meta charset="UTF-8">
   </head>
   <body>
+      <div id="test"></div>
       <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+
   </body>
 </html>
