--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
       <div id="test"></div>
-      <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+      <script type="text/javascript" src="./build/bundle.js" charset="utf-8"></script>
 
   </body>
 </html>
