--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
       <meta charset="UTF-8">
+      <title>Katryn McIntosh</title>
   </head>
   <body>
       <div id="test"></div>
-      <script type="text/javascript" src="./build/bundle.js" charset="utf-8"></script>
+      <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
   </body>
 </html>
