--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
   <head>
       <meta charset="UTF-8">
       <title>Katryn McIntosh</title>
+      <style>
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Prata|VT323';
+</style>
   </head>
   <body>
       <div id="test"></div>
