--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
   <head>
-      <meta charset="UTF-8">
-      <title>Katryn McIntosh</title>
-      <style>
-@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Prata|VT323';
-</style>
+    <meta charset="UTF-8">
+    <title>Katryn McIntosh</title>
+    <style>
+      @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Prata|VT323';
+    </style>
   </head>
   <body>
-      <div id="test"></div>
-      <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-
+    <div id='app'></div>
+    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
