Break out nav and social bar into separate components
Also some other junk. Figuring out the design as you go is not
the best for logical commits. Oops.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Katryn McIntosh</title>
     <style>
-      @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Prata|VT323';
+      @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Code+Pro|VT323';
     </style>
   </head>
   <body>
