--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Katryn McIntosh</title>
     <style>
-      @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Code+Pro|VT323';
+      @import url('https://fonts.googleapis.com/css?family=Roboto:100,400,400i,900');
     </style>
   </head>
   <body>
