Redo and strip down desing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Katryn McIntosh</title>
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Roboto:100,400,400i,900');
+      @import url('https://fonts.googleapis.com/css?family=Amiri:400,400i|Open+Sans:600,600i');
     </style>
   </head>
   <body>
