--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -7,7 +8,6 @@
     </style>
   </head>
   <body>
-    <div id='app'></div>
-    <script type="text/javascript" src="/public/bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/public/bundle.js"></script>
   </body>
 </html>
