--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Katryn McIntosh</title>
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Amiri:400,400i|Open+Sans:600,600i');
+      @import url('https://fonts.googleapis.com/css?family=VT323|Open+Sans:600,600i');
     </style>
   </head>
   <body>
